tests/ui/reachable/expr_add.stderr
error: unreachable expression
  --> $DIR/expr_add.rs:17:13
   |
LL |     let x = Foo + return;
   |             ^^^^^^------
   |             |     |
   |             |     any code following this expression is unreachable
   |             unreachable expression
   |
note: the lint level is defined here
  --> $DIR/expr_add.rs:3:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

